force-app/main/default/objects/Apttus_Config2__OrderSourceCustomFields__c/Apttus_Config2__OrderSourceCustomFields__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds the list of API names of custom fields to copy the data  from the source object when creating orders. The order object should have fields matching the API names listed here.</description>
    <label>Order Source Custom Fields</label>
</CustomObject>