force-app/main/default/objects/Apttus_Config2__OrderSourceCustomFields__c/fields/Apttus_Config2__CustomFieldNames__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CustomFieldNames__c</fullName>
    <description>Enter the list of field API names from the source object to copy. Each field may be separated by a comma or a new line.</description>
    <inlineHelpText>Enter the list of field API names from the source object to copy. Each field may be separated by a comma or a new line.</inlineHelpText>
    <label>Custom Field Names</label>
    <type>TextArea</type>
</CustomField>