force-app/main/default/objects/Apttus_Config2__OrderSourceCustomFields__c/fields/Apttus_Config2__SourceObjectType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SourceObjectType__c</fullName>
    <description>The type of the source object to copy data from.

Valid values are the following

Proposal
Agreement
Order</description>
    <inlineHelpText>The type of the source object to copy data from.

Valid values are the following

Proposal
Agreement
Order</inlineHelpText>
    <label>Source Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>